# linearbookscanner

./: Makefile  README-old.md  README.md  generate_nanopb.sh  pyproject.toml  requirements.txt  screen.sh
.github/workflows/: cicd-pipeline.yml
STM32/: .gitignore  .mxproject  linearbookscanner.ioc
STM32/Core/Inc/: comms.h  motor_control.h  state_machine.h  stm32f4xx_it.h
STM32/Core/Src/: comms.c  comms_protocol.pb.c  main.c  motor_control.c  state_machine.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
avr/: Makefile  main.c  main.elf  main.hex
docker/: Dockerfile  docker-entrypoint.sh
lbs_arduino/: comms.cpp  comms.h  comms_protocol.pb.h  lbs_arduino.ino
pi-c/: comms_protocol.pb.h  uart_nanopb_receiver.c  uart_receiver
proto/: .gitignore  comms_protocol.proto  test.proto
rpi/linearbookscanner/: core.py  helpers.py  scanner.py  spi.py
src/linearbookscanner/: __init__.py  arduinocomms.py  comms_protocol_pb2.py  devicecomms.py  helpers.py  linearbookscanner.py  michigan.py  scanner.py  spi.py  struct_comms.py
