[tool.poetry]
name = "linearbookscanner"
version = "1.0.0a5"
description = "Linear Book Scanner ECE 498A UWaterloo"
authors = ["Keyon Jerome"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/keyonjerome/linearbookscanner"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "linearbookscanner", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
black = "^24.4.2"
python-sane = "^2.9.1"
spidev = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "~7"
flake8 = "^3.8"
pytest-cov = "~4"
pylint = "~2"
Sphinx = "^3.3"

[tool.poetry.scripts]
linearbookscanner = 'linearbookscanner:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
